sandbox-deployment/storefront-stage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefrontstage
  namespace: storefrontstage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: storefrontstage
  template:
    metadata:
      labels:
        app: storefrontstage
    spec:
      imagePullSecrets:
        - name: do-regcred
      containers:
        - name: app
          image: registry.digitalocean.com/grepvideos-server/storefront:5388ebe0-251008155912-amd64
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
