sandbox-deployment/storefront-stage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storefrontstage
  namespace: storefrontstage
spec:
  type: ClusterIP
  selector:
    app: storefrontstage
  ports:
    - name: http
      port: 80
      targetPort: 8080
