sandbox-deployment/storefront-stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storefrontstage
  namespace: storefrontstage
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sandbox-storefront-stage.dotc3.com
      secretName: sandbox-storefront-stage-tls
  rules:
    - host: sandbox-storefront-stage.dotc3.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storefrontstage
                port:
                  number: 80
